Fixed horizontal scrolling in search results by removing overflow:auto on the main-container

--- a/app/assets/stylesheets/_layout.scss
+++ b/app/assets/stylesheets/_layout.scss
@@ -7,7 +7,6 @@ html, body {
 }
 
 #main-container {
-  overflow:auto;
   padding-bottom:150px; /* this needs to be bigger than footer height*/
 }
 
@@ -29,4 +28,4 @@ a {
 .bg-primary {
   background-color: $jhuBlue !important;
   color: #FFFFFF !important;
-}
+}main-container
